--- a/package.json
+++ b/package.json
@@ -1,9 +1,9 @@
 {
   "name": "backend-kasir-apotek",
   "version": "1.0.0",
-  "main": "build/index.js",
+  "main": "build/server.js",
   "scripts": {
-    "start": "node build/index.js",
+    "start": "node build/server.js",
     "dev": "nodemon ./src/server.ts",
     "build": "tsc",
     "vercel-build": "npm run build",
