--- a/package.json
+++ b/package.json
@@ -7,8 +7,8 @@
     "dev": "nodemon ./src/server.ts",
     "build": "tsc",
     "vercel-build": "npm run build",
-    "postinstall": "npm run build",
     "test": "echo \"Error: no test specified\" && exit 1",
+    "postinstall": "npm install && npm run build",
     "lint": "eslint . --ext .ts"
   },
   "repository": {
