--- a/package.json
+++ b/package.json
@@ -5,10 +5,10 @@
   "scripts": {
     "start": "node build/server.js",
     "dev": "nodemon ./src/server.ts",
-    "build": "tsc",
+    "build": "tsc --pretty",
     "vercel-build": "npm run build",
+    "postinstall": "npm run build",
     "test": "echo \"Error: no test specified\" && exit 1",
-    "postinstall": "npm install && npm run build",
     "lint": "eslint . --ext .ts"
   },
   "repository": {
